<resources>
    <string name="app_name">TestApp</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="student_list">Student List</string>
    <string name="student_details">Student Details</string>
    <string name="student_name">Student\'s Name</string>
    <string name="roll_no">Roll No</string>
    <string name="submit">Submit</string>
    <string name="update">Update</string>
</resources>
