<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".StudentDetailsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/student_details_activity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:title="@string/student_details"
        app:titleTextColor="@android:color/white"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_student_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/edittext_margin_start_end"
        android:layout_marginEnd="@dimen/edittext_margin_start_end"
        android:layout_marginTop="@dimen/student_details_activity_margin_top"
        android:layout_marginBottom="@dimen/edittext_margin_bottom">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiet_student_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/student_name"
            android:inputType="textPersonName" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_roll_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/edittext_margin_start_end"
        android:layout_marginEnd="@dimen/edittext_margin_start_end"
        android:layout_marginBottom="@dimen/edittext_margin_bottom">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiet_roll_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/roll_no"
            android:inputType="number" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/custom_button"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/btn_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/custom_button"
        android:text="@string/update"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:visibility="gone"/>

</LinearLayout>